--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,7 +10,7 @@ services:
     ports:
       - 3306:3306
     volumes:
-      - ./docker/mysql:/var/lib/mysql
+      - ./mysql:/var/lib/mysql
   app:
     container_name: app
     build:
