--- a/app/Cargo.toml
+++ b/app/Cargo.toml
@@ -1,9 +1,8 @@
 [package]
-name = "odoro-tree"
+name = "app"
 version = "0.1.0"
 edition = "2021"
-authors = ["toma09to"]
+
+# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-diesel = { version = "2.0.0", features = ["mysql"] }
-dotenv = "0.15.0"
