--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -18,6 +18,8 @@ services:
       dockerfile: ./app/Dockerfile
     environment:
       DATABASE_URL: mysql://root:root@db/odoro-tree
+    volumes:
+      - ./app:/app
     working_dir: /app
     depends_on:
       - db
